# otsvm

./: .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile.in  README.rst  VERSION  codecov.yml
.ci_support/: run_docker_linux.sh
.github/workflows/: build.yml
cmake/: FindLibSVM.cmake  FindPythonModule.cmake  OTSVMConfig.cmake.in  UseOTSVM.cmake
distro/debian/: changelog  control  copyright  rules
distro/rpm/: otsvm.spec
distro/windows/: Makefile  README.txt  installer.nsi
doc/: CMakeLists.txt  GenericInformation.tex.in  OTSVM_Documentation.sty  OTSVM_Documentation.tex  OTSVM_ReferenceGuide.tex  OTSVM_UseCasesGuide.tex  OTSVM_UserManual.tex  OTSVM_summary.tex  OTSVM_title.tex
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt
lib/include/otsvm/: OTSVM.hxx  OTSVMprivate.hxx
lib/src/: CMakeLists.txt  ExponentialRBF.cxx  ExponentialRBF.hxx  KMeansClustering.cxx  KMeansClustering.hxx  LibSVM.cxx  LibSVM.hxx  LibSVMClassification.cxx  LibSVMRegression.cxx  LinearKernel.cxx  LinearKernel.hxx  NormalRBF.cxx  PolynomialKernel.cxx  PolynomialKernel.hxx  RationalKernel.cxx  RationalKernel.hxx  SVMClassification.cxx  SVMKernel.cxx  SVMKernel.hxx  SVMKernelImplementation.cxx  SVMKernelImplementation.hxx  SVMKernelRegressionEvaluation.cxx  SVMKernelRegressionGradient.cxx  SVMKernelRegressionGradient.hxx  SVMKernelRegressionHessian.cxx  SVMRegression.cxx  SVMRegression.hxx  SVMRegressionImplementation.cxx  SVMRegressionImplementation.hxx  SVMResourceMap.cxx  SigmoidKernel.cxx  SigmoidKernel.hxx
lib/src/LibSVM/: CMakeLists.txt  svm.cpp
lib/src/otsvm/: ExponentialRBF.hxx  KMeansClustering.hxx  LibSVM.hxx  LibSVMClassification.hxx  LibSVMRegression.hxx  LinearKernel.hxx  NormalRBF.hxx  PolynomialKernel.hxx  RationalKernel.hxx  SVMClassification.hxx  SVMKernel.hxx  SVMKernelImplementation.hxx  SVMKernelRegressionEvaluation.hxx  SVMKernelRegressionGradient.hxx  SVMKernelRegressionHessian.hxx  SVMRegression.hxx  SVMRegressionImplementation.hxx  SVMResourceMap.hxx  SigmoidKernel.hxx
lib/test/: CMakeLists.txt  t_ExponentialRBF_std.cxx  t_ExponentialRBF_std.expout  t_NormalRBF_std.cxx  t_NormalRBF_std.expout  t_PolynomialKernel_std.cxx  t_PolynomialKernel_std.expout  t_RationalKernel_std.cxx  t_RationalKernel_std.expout  t_SVMKernel_std.cxx  t_SVMRegression_std.cxx  t_SVMRegression_std.expout
python/: doxy2swig.py
python/doc/: conf.py.in  index.rst  openturns-objects.inv
python/doc/developer_guide/architecture/: architecture.rst
python/doc/examples/: examples.rst  plot_example1.py  plot_example2.py  sample.csv
python/doc/themes/openturns/: layout.html
python/doc/user_manual/: user_manual.rst
python/src/: CMakeLists.txt  ExponentialRBF.i  ExponentialRBF_doc.i.in  KMeansClustering.i  KMeansClustering_doc.i  LibSVM.i  LibSVMClassification.i  LibSVMClassification_doc.i.in  LibSVMRegression.i  LibSVMRegression_doc.i.in  LibSVM_doc.i.in  LinearKernel.i  LinearKernel_doc.i.in  METADATA.in  NormalRBF.i  NormalRBF_doc.i  PolynomialKernel.i  PolynomialKernel_doc.i.in  RationalKernel.i  RationalKernel_doc.i  SVMClassification.i  SVMClassification_doc.i  SVMKernel.i  SVMKernelImplementation.i  SVMKernelImplementation_doc.i  SVMKernel_doc.i.in  SVMRegression.i  SVMRegressionImplementation.i  SVMRegression_doc.i.in  SigmoidKernel.i  SigmoidKernel_doc.i.in  __init__.py  otsvm_module.i
python/test/: CMakeLists.txt  multiclass.csv  sample.csv  t_ExponentialRBF_std.expout  t_ExponentialRBF_std.py  t_KMeansClustering.expout  t_KMeansClustering.py  t_LinearKernel_std.expout  t_LinearKernel_std.py  t_NormalRBF_std.expout  t_NormalRBF_std.py  t_PolynomialKernel_std.expout  t_PolynomialKernel_std.py  t_RationalKernel_std.expout  t_RationalKernel_std.py  t_SVMClassification_multiclass.expout  t_SVMClassification_multiclass.py  t_SVMClassification_std.expout  t_SVMClassification_std.py  t_SVMKernel_std.py  t_SVMRegression_gsobol.expout  t_SVMRegression_gsobol.py  t_SVMRegression_ishigami.expout  t_SVMRegression_ishigami.py  t_SVMRegression_saveload.py  t_SigmoidKernel_std.expout  t_SigmoidKernel_std.py  t_example1.py  t_example2.py
